--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
-    "svelte": "^3.0.0"
+    "svelte": "^3.42.6"
   },
   "dependencies": {
     "jquery": "^3.6.0",
     "puppeteer": "^10.2.0",
     "sirv-cli": "^1.0.0",
     "svelte-spa-router": "^3.2.0",
+    "sveltestrap": "^5.6.3",
     "uuid": "^8.3.2"
   }
 }
